UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/Contract.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>