UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Add_Renewal_Update__c.field-meta.xml
<CustomField>
    <fullName>Add_Renewal_Update__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Add Renewal Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>