UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broadband, FiOS &amp; Voice Bundles</fullName>
                <label>Broadband, FiberOptic &amp; Voice Bundles - Existing/Upgrades</label>
            </value>
            <value>
                <fullName>Broadband, FiOS &amp; Voice Bundles - New Service</fullName>
                <label>Broadband, FiberOptic &amp; Voice Bundles - New Service</label>
            </value>
            <value>
                <fullName>Current Broadband Offers</fullName>
            </value>
            <value>
                <fullName>Ethernet/Data Services</fullName>
                <label>Ethernet/Transport Services</label>
            </value>
            <value>
                <fullName>FSA 1 Page</fullName>
            </value>
            <value>
                <fullName>FSA Standard Full Version</fullName>
            </value>
            <value>
                <fullName>Local Services</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Premier Retail LOA</fullName>
            </value>
            <value>
                <fullName>Premier Retail LOA-MDF</fullName>
            </value>
            <value>
                <fullName>SAA</fullName>
            </value>
            <value>
                <fullName>Twenty-Twenty LOA-MDF</fullName>
            </value>
            <value>
                <fullName>VAL</fullName>
            </value>
            <value>
                <fullName>VoIP</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
                <label>Wireless Solutions</label>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>PAL-Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Agreement</fullName>
            </value>
            <value>
                <fullName>Door to Door LOA-MDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>