UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Strategy Development</fullName>
            </value>
            <value>
                <fullName>Discussions with Sales</fullName>
                <label>Connect Call Review</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>