UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Bulk_Voice_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Voice_Package_Name__c</fullName>
    <label>Bulk - Voice Package Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>