UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/CanUserSeeThisRecord__c.field-meta.xml
<CustomField>
    <fullName>CanUserSeeThisRecord__c</fullName>
    <formula>IF(
    OR(
        $User.View_All_Contracts__c = TRUE,
        CONTAINS(Contract_Record_Type_Formula__c,&apos;Frontier Services Agreement&apos;),
        IF(
            OR(CONTAINS(CreatedBy.UserRole.Name, &apos;B2B&apos;), CONTAINS(CreatedBy.Profile.Name, &apos;#Revana AccountExec&apos;)),
            IF(
                CONTAINS($UserRole.Name, &apos;B2B&apos;), 
                TRUE, 
                FALSE
            ),
            IF(
                CONTAINS($UserRole.Name, &apos;B2B&apos;), 
                FALSE, 
                TRUE
            )
        )
    ), 
    TRUE, 
    FALSE
)</formula>
    <label>Can logged in user see this record?</label>
    <type>Checkbox</type>
</CustomField>