UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>