UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/CLM_Contract_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>CLM_Contract_Term_Years__c</fullName>
    <formula>ContractTerm/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLM Contract Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>