UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/CLM_Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>CLM_Signing_Order__c</fullName>
    <label>Signing Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer 1st, Frontier 2nd</fullName>
                <default>true</default>
                <label>Customer 1st, Frontier 2nd</label>
            </value>
            <value>
                <fullName>Frontier 1st, Customer 2nd</fullName>
            </value>
            <value>
                <fullName>Customer Only</fullName>
            </value>
            <value>
                <fullName>Frontier Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>