UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/CLM_Wholesale_FTR_AppA__c.field-meta.xml
<CustomField>
    <fullName>CLM_Wholesale_FTR_AppA__c</fullName>
    <label>CLM Wholesale FTR AppA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL FC</fullName>
            </value>
            <value>
                <fullName>AZ CTC</fullName>
            </value>
            <value>
                <fullName>AZ F13</fullName>
            </value>
            <value>
                <fullName>AZ Navajo</fullName>
            </value>
            <value>
                <fullName>CA CTC</fullName>
            </value>
            <value>
                <fullName>CA CTF</fullName>
            </value>
            <value>
                <fullName>CA F13</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>FL CTF</fullName>
            </value>
            <value>
                <fullName>FL FC</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>IL CTC</fullName>
            </value>
            <value>
                <fullName>IL F13</fullName>
            </value>
            <value>
                <fullName>IN F13</fullName>
            </value>
            <value>
                <fullName>IN FC</fullName>
            </value>
            <value>
                <fullName>MI F13</fullName>
            </value>
            <value>
                <fullName>MI FC</fullName>
            </value>
            <value>
                <fullName>MN CTC</fullName>
            </value>
            <value>
                <fullName>MN FC</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>NM</fullName>
            </value>
            <value>
                <fullName>NV CTC</fullName>
            </value>
            <value>
                <fullName>NV F13</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
            <value>
                <fullName>PA CTC FC</fullName>
            </value>
            <value>
                <fullName>PA CW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>