UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Contract_Adobe_Sign_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Adobe_Sign_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Adobe Sign Agreement</label>
    <referenceTo>Contract_Adobe_Sign_Agreement__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>