UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Signed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Declined/Cancelled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Terminated by Frontier</fullName>
            </value>
            <value>
                <fullName>Terminated by Partner</fullName>
            </value>
            <value>
                <fullName>Terminated by Customer</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Redlined</fullName>
            </value>
            <value>
                <fullName>Sent Redline Document to Customer</fullName>
            </value>
            <value>
                <fullName>FTR Received Redline Document from Customer</fullName>
            </value>
            <value>
                <fullName>FTR Generated Final Clean Document</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Legal</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Risk Management</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Engineering</fullName>
            </value>
            <value>
                <fullName>Redline Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Redline Approved by Risk Management</fullName>
            </value>
            <value>
                <fullName>Redline Approved</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
            <value>
                <fullName>Document Generated</fullName>
            </value>
            <value>
                <fullName>Document Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Awaiting for Customer Signature</fullName>
            </value>
            <value>
                <fullName>FTR Signed</fullName>
            </value>
            <value>
                <fullName>Sent Document back to Customer</fullName>
            </value>
            <value>
                <fullName>Up for Renewal</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Customer Requests Negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>