UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Contract_Team_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Team_Status__c</fullName>
    <label>Contract Team Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Drafting-OUT</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Redlining-IN</fullName>
            </value>
            <value>
                <fullName>Redlining-OUT</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Sent to Risk Management</fullName>
            </value>
            <value>
                <fullName>Sent to Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>