UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/De_bulk_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>De_bulk_Start_Date__c</fullName>
    <label>De-bulk Start Date</label>
    <type>Date</type>
</CustomField>