UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Demo_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Type</label>
    <type>Text</type>
</CustomField>