UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document Generated</fullName>
            </value>
            <value>
                <fullName>Document Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Customer Signed / Awaiting Approval</fullName>
                <label>Customer Signed</label>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Signature Canceled</fullName>
            </value>
            <value>
                <fullName>Customer Redline</fullName>
            </value>
            <value>
                <fullName>Legal Redline</fullName>
            </value>
            <value>
                <fullName>Legal Approved</fullName>
            </value>
            <value>
                <fullName>Declined by Customer</fullName>
            </value>
            <value>
                <fullName>Sent Redline Document to Customer</fullName>
            </value>
            <value>
                <fullName>FTR Received Redline Document from Customer</fullName>
            </value>
            <value>
                <fullName>FTR Generated Final Clean Document</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Legal</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Risk Management</fullName>
            </value>
            <value>
                <fullName>AE sent Redline to Engineering</fullName>
            </value>
            <value>
                <fullName>Redline Approved by Legal</fullName>
            </value>
            <value>
                <fullName>Redline Approved by Risk Management</fullName>
            </value>
            <value>
                <fullName>Redline Approved</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
            <value>
                <fullName>Customer Declined</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Document Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>