UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/EffectiveOneTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveOneTimeTotal__c</fullName>
    <label>EffectiveOneTimeTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>