UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/EffectiveRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>EffectiveRecurringTotal__c</fullName>
    <label>EffectiveRecurringTotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>