UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Email_Notification_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Permitted__c</fullName>
    <label>Email Notification Permitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>