UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Engineering_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Contact__c</fullName>
    <label>Engineering Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>