UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Final_Bulk_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Bulk_Bill_Date__c</fullName>
    <label>Final Bulk Bill Date</label>
    <type>Date</type>
</CustomField>