UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Flat_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Percentage__c</fullName>
    <formula>Opportunity__r.Flat_Rate_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat Rate Percentage</label>
    <type>Text</type>
</CustomField>