UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/ftr_Company_Signed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>ftr_Company_Signed_By_Name__c</fullName>
    <label>Company Signed By Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>