UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/ftr_IsBundle__c.field-meta.xml
<CustomField>
    <fullName>ftr_IsBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bundled</label>
    <type>Checkbox</type>
</CustomField>