UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/If_Lost_Disconnect_Details__c.field-meta.xml
<CustomField>
    <fullName>If_Lost_Disconnect_Details__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>If Lost - Disconnect Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>