UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/If_Lost_Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>If_Lost_Primary_Reason__c</fullName>
    <label>If Lost - Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Service or Repair issues</fullName>
            </value>
            <value>
                <fullName>Service Not Available</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>