UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Interested_in_a_Different_Provider__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_a_Different_Provider__c</fullName>
    <label>Interested in a Different Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>