UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <label>License Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>