UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/MDU_ContractType__c.field-meta.xml
<CustomField>
    <fullName>MDU_ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bulk Only</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>EMA/NEMA/Bulk</fullName>
            </value>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>