UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/New_Expiration_Date_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>New_Expiration_Date_if_applicable__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>New Expiration Date (if applicable)</label>
    <type>Date</type>
</CustomField>