UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Number_of_days_remaining_for_renewal__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_remaining_for_renewal__c</fullName>
    <formula>EndDate - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days remaining for renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>