UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/On_Site_Technical_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Technical_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-Site Technical Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (On-Site Technical Contact Name)</relationshipLabel>
    <relationshipName>Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>