UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Opportunity_Relation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Product Type)</relationshipLabel>
    <relationshipName>Contracts_del</relationshipName>
    <type>Lookup</type>
</CustomField>