UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/PPI__c.field-meta.xml
<CustomField>
    <fullName>PPI__c</fullName>
    <inlineHelpText>Inflationary Price Clause included yes or no</inlineHelpText>
    <label>PPI(Producer Price Index Adjustment)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Schedule_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>