UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Primary_Reason_Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_Lost_Detail__c</fullName>
    <description>New Fields/Dropdowns on Contract/Schedule Object in SF to allow for disposition</description>
    <label>Primary Reason Lost Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>