UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Property_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property/Decision Maker Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Property Contact Name)</relationshipLabel>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>