UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Quote_Sterling__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sterling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sterling Quote</description>
    <label>Quote Sterling</label>
    <referenceTo>SterlingQuote__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>