UCF-APR2.4/ftr main/force-app/main/default/objects/Contract/fields/Ready_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Renewal__c</fullName>
    <formula>if (Number_of_days_remaining_for_renewal__c&lt;180, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Renewal</label>
    <type>Checkbox</type>
</CustomField>